# Rust-Guardian

./: .gitignore  CLAUDE.md  Cargo.toml  PARALLEL_DEV_GUIDE.md  README.md  Rust-Guardian_System_Design.md  run-agents.sh
config/: guardian.yml
contracts/: mock.rs  shared_types.rs
crates/guardian-agent/: Cargo.toml
crates/guardian-agent/src/: lib.rs
crates/guardian-api/: Cargo.toml
crates/guardian-api/src/: lib.rs
crates/guardian-audio/: Cargo.toml
crates/guardian-audio/src/: lib.rs
crates/guardian-audit/: Cargo.toml
crates/guardian-audit/src/: lib.rs
crates/guardian-capture/: Cargo.toml
crates/guardian-capture/src/: lib.rs
crates/guardian-core/: Cargo.toml
crates/guardian-core/src/: config.rs  contracts.rs  engine.rs  error.rs  lib.rs  mock.rs  pipeline.rs
crates/guardian-detector/: Cargo.toml
crates/guardian-detector/src/: lib.rs
crates/guardian-masker/: Cargo.toml
crates/guardian-masker/src/: lib.rs
crates/guardian-ota/: Cargo.toml
crates/guardian-ota/src/: lib.rs
crates/guardian-output/: Cargo.toml
crates/guardian-output/src/: lib.rs
crates/guardian-signer/: Cargo.toml
crates/guardian-signer/src/: lib.rs
crates/guardian-thermal/: Cargo.toml
crates/guardian-thermal/src/: lib.rs
skills/: agent-a-core.md  agent-b-capture-output.md  agent-c-detector-masker.md  agent-d-signer-audit.md  agent-e-agent-runtime.md  agent-f-api.md
src/: main.rs
